Ripped out old networking code to prepare for rewrite.

--- a/Lich.html
+++ b/Lich.html
@@ -1,25 +1,38 @@
 <!-- 
-    Lich.js - JavaScript audio/visual live coding language
-    Copyright (C) 2012 Chad McKinney
+    Lich.js - JavaScript a networked audio/visual live coding language
+    Copyright (C) 2012-2013 Chad McKinney
 	
 	http://chadmckinneyaudio.com/
 	seppukuzombie@gmail.com
 	
-	All rights reserved.
+	LICENSE
+	=======
 
-	This program is free software; you can redistribute it and/or modify
-    it under the terms of the GNU General Public License as published by
-    the Free Software Foundation; either version 2 of the License, or
-    (at your option) any later version.
+	Licensed under the Simplified BSD License:
 
-    This program is distributed in the hope that it will be useful,
-    but WITHOUT ANY WARRANTY; without even the implied warranty of
-    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-    GNU General Public License for more details.
+	Redistribution and use in source and binary forms, with or without
+	modification, are permitted provided that the following conditions are met: 
 
-    You should have received a copy of the GNU General Public License
-    along with this program; if not, write to the Free Software
-    Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
+	1. Redistributions of source code must retain the above copyright notice, this
+	   list of conditions and the following disclaimer. 
+	2. Redistributions in binary form must reproduce the above copyright notice,
+	   this list of conditions and the following disclaimer in the documentation
+	   and/or other materials provided with the distribution. 
+
+	THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
+	ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+	WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
+	DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
+	ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+	(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
+	LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
+	ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
+	(INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
+	SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+
+	The views and conclusions contained in the software and documentation are those
+	of the authors and should not be interpreted as representing official policies, 
+	either expressed or implied, of the FreeBSD Project.
 -->
 
 <!DOCTYPE html>
@@ -1609,53 +1622,11 @@ deleteAll
 	</textarea>
 	
 	<textarea id="post" rows="6" spellcheck="false" readonly="true">Lich.js&#10;</textarea>
-	
-	
-	<textarea id="userName" spellcheck="false" contenteditable="true"
-		onChange="javascript:return login()">default</textarea>
-	<textarea id="default" rows="1" spellcheck="false" readonly="true" style="display:none;"
-		onChange="javascript:return parseChangeFromNetwork('default');"> </textarea>
-
-	<!-- Hardcoded For now, will be dynamic in the future 
-	<textarea id="Chad" rows="1" spellcheck="false" readonly="true" style="display:none;"
-		onChange="javascript:return parseChangeFromNetwork('Chad');"> </textarea>
-
-	<textarea id="Cole" rows="1" spellcheck="false" readonly="true" style="display:none;"
-		onChange="javascript:return parseChangeFromNetwork('Cole');"> </textarea>
-
-	<textarea id="Curtis" rows="1" spellcheck="false" readonly="true" style="display:none;"
-		onChange="javascript:return parseChangeFromNetwork('Curtis');"> </textarea>
-
-	<textarea id="Ben" rows="1" spellcheck="false" readonly="true" style="display:none;"
-		onChange="javascript:return parseChangeFromNetwork('Ben');"> </textarea>
-
-	-->
 
 	<script LANGUAGE="JavaScript" type="text/javascript">
 		compileLich();
 	</script>
 
-	<!-- NETWORK SYNCHRONIZATION. CURRENTLY OFF. UNCOMMENT TO RESTORE.
-			'Chad',
-			'Cole', 
-			'Curtis',
-			'Ben'
-	
-	<SCRIPT SRC="http://mobwrite3.appspot.com/static/compressed_form.js"></SCRIPT>`
-	<SCRIPT>
-	  mobwrite.syncGateway = 'http://mobwrite3.appspot.com/scripts/q.py';
-	</SCRIPT>
-	
-	<BODY ONLOAD="
-		mobwrite.share(
-			'terminal', 
-			'default'
-		); 
-		mobwrite.minSyncInterval = 500;
-		mobwrite.maxSyncInterval = 1000;
-		mobwrite.syncInterval = 500;
-	">
-	-->
 </body>
 
 </html>
