--- a/Lich.html
+++ b/Lich.html
@@ -1628,7 +1628,7 @@ deleteAll
 	<script LANGUAGE="JavaScript" type="text/javascript">
 		compileLich();
 	</script>
-	<script src="/socket.io/socket.io.js"></script>
+	<script src="http://localhost:80/socket.io/socket.io.js"></script>
 	<script LANGUAGE="JavaScript" type="text/javascript">
   		connectToWebSocketServer();
 	</script>
