--- a/Lich.html
+++ b/Lich.html
@@ -32,7 +32,7 @@
 
 	The views and conclusions contained in the software and documentation are those
 	of the authors and should not be interpreted as representing official policies, 
-	either expressed or implied, of the FreeBSD Project.
+	either expressed or implied, of the Lich.js Project.
 -->
 
 <!DOCTYPE html>
