--- a/Lich.html
+++ b/Lich.html
@@ -101,8 +101,9 @@
 	<script type="text/javascript" src="Parser/iterL.js"></script>
 	<script type="text/javascript" src="Parser/parse.js"></script>
 	<script type="text/javascript" src="Parser/LichParser.js"></script>
+	<script type="text/javascript" src="Parser/LichParser.js"></script>
+	<script type="text/javascript" src="Compiler/Compiler.js"></script>
 	<script type="text/javascript" src="Lich.js"></script>
-
 	<script type="text/javascript" src="Networking/LichClient.js"></script>
 </head>
 
