Added compiler functionality

--- a/Lich.html
+++ b/Lich.html
@@ -89,6 +89,8 @@
 	<script src="third-party/three.js/shaders/VerticalTiltShiftShader.js"></script>
 	<script src="third-party/three.js/shaders/VignetteShader.js"></script>
 
+	<script type="text/javascript" src="Compiler/Objects.js"></script>
+	<script type="text/javascript" src="Compiler/VM.js"></script>
 	<script type="text/javascript" src="Soliton.js/Soliton.js"></script>
 	<script type="text/javascript" src="CloudChamber.js/CloudChamber.js"></script>
 	<script type="text/javascript" src="CloudChamber.js/MarchingCubes.js"></script>
