Added functionality for closures and primitives.

--- a/Lich.html
+++ b/Lich.html
@@ -105,6 +105,7 @@
 	<script type="text/javascript" src="Parser/LichParser.js"></script>
 	<script type="text/javascript" src="Parser/LichParser.js"></script>
 	<script type="text/javascript" src="Compiler/Compiler.js"></script>
+	<script type="text/javascript" src="Library/Primitives.js"></script>
 	<script type="text/javascript" src="Lich.js"></script>
 	<script type="text/javascript" src="Networking/LichClient.js"></script>
 </head>
