Added lists, list indexing, and list mapping

--- a/Lich.html
+++ b/Lich.html
@@ -104,7 +104,7 @@
 	<script type="text/javascript" src="Parser/iterL.js"></script>
 	<script type="text/javascript" src="Parser/parse.js"></script>
 	<script type="text/javascript" src="Parser/LichParser.js"></script>
-	<script type="text/javascript" src="Library/Primitives.js"></script>
+	<script type="text/javascript" src="Library/Prelude.js"></script>
 	<script type="text/javascript" src="Lich.js"></script>
 	<script type="text/javascript" src="Networking/LichClient.js"></script>
 </head>
