some initial code for new piece

--- a/Lich.html
+++ b/Lich.html
@@ -104,6 +104,8 @@
 	<script type="text/javascript" src="Lich.js"></script>
 
 	<script type="text/javascript" src="Networking/LichClient.js"></script>
+	<script type="text/javascript" src="Pieces/OpenField.js"></script>
+
 </head>
 
 <body>
