--- a/Lich.html
+++ b/Lich.html
@@ -107,7 +107,8 @@
 	<script type="text/javascript" src="Library/Prelude.js"></script>
 	<script type="text/javascript" src="Lich.js"></script>
 	<script type="text/javascript" src="Networking/LichClient.js"></script>
-	<script type="text/javascript" src="Pieces/OpenField.js"></script>
+	<script type="text/javascript" src="Pieces/MountainsOfMadness.js"></script>
+	<script type="text/javascript" src="Networking/LichChat.js"></script>
 
 </head>
 
