--- a/Lich.html
+++ b/Lich.html
@@ -108,6 +108,7 @@
 	<script type="text/javascript" src="Networking/LichClient.js"></script>
 	<script type="text/javascript" src="Networking/LichChat.js"></script>
 	<script type="text/javascript" src="Networking/LichTerminal.js"></script>
+	<script src="/socket.io/socket.io.js"></script>
 </head>
 
 <body>
@@ -128,7 +129,7 @@
     <script LANGUAGE="JavaScript" type="text/javascript">
             compileLich();
     </script>
-    <script src="http://173.203.102.166:80/socket.io/socket.io.js"></script>
+
     <script LANGUAGE="JavaScript" type="text/javascript">
               connectToWebSocketServer();
     </script>
