--- a/Lich.html
+++ b/Lich.html
@@ -108,7 +108,7 @@
 	<script type="text/javascript" src="Networking/LichClient.js"></script>
 	<script type="text/javascript" src="Networking/LichChat.js"></script>
 	<script type="text/javascript" src="Networking/LichTerminal.js"></script>
-	<script src="/socket.io/socket.io.js"></script>
+	<script src="socket.io/socket.io.js"></script>
 </head>
 
 <body>
