esc key now does full screen, added mountains of madness narration panel. Changed font to OCRA.

--- a/Lich.html
+++ b/Lich.html
@@ -92,7 +92,7 @@
 	<script type="text/javascript" src="Compiler/Objects.js"></script>
 	<script type="text/javascript" src="Compiler/VM.js"></script>
 	<script type="text/javascript" src="Compiler/Compiler.js"></script>
-	<script type="text/javascript" src="Soliton.js/Soliton.js"></script>
+	<!--<script type="text/javascript" src="Soliton.js/Soliton.js"></script> -->
 	<script type="text/javascript" src="CloudChamber.js/CloudChamber.js"></script>
 	<script type="text/javascript" src="CloudChamber.js/MarchingCubes.js"></script>
 	<script type="text/javascript" src="third-party/CodeMirror.js"></script>
@@ -109,6 +109,7 @@
 	<script type="text/javascript" src="Networking/LichClient.js"></script>
 	<script type="text/javascript" src="Networking/LichChat.js"></script>
 	<script type="text/javascript" src="Networking/LichTerminal.js"></script>
+	<script type="text/javascript" src="Pieces/MountainsOfMadnessPanel.js"></script>
 	<script src="socket.io/socket.io.js"></script>
 </head>
 
