--- a/Lich.html
+++ b/Lich.html
@@ -89,6 +89,7 @@
 	<script src="third-party/three.js/shaders/VerticalTiltShiftShader.js"></script>
 	<script src="third-party/three.js/shaders/VignetteShader.js"></script>
 
+	<!--<script type="text/javascript" src="third-party/functional.min.js"></script>-->
 	<script type="text/javascript" src="Compiler/Objects.js"></script>
 	<script type="text/javascript" src="Compiler/VM.js"></script>
 	<script type="text/javascript" src="Compiler/Compiler.js"></script>
