--- a/Lich.html
+++ b/Lich.html
@@ -110,7 +110,7 @@
 	<script type="text/javascript" src="Networking/LichClient.js"></script>
 	<script type="text/javascript" src="Networking/LichChat.js"></script>
 	<script type="text/javascript" src="Networking/LichTerminal.js"></script>
-	<script type="text/javascript" src="Pieces/MountainsOfMadnessPanel.js"></script>
+	<script type="text/javascript" src="Pieces/MountainsOfMadnessPanel.js"></script>-
 	<script src="socket.io/socket.io.js"></script>
 	<!--<script type="text/javascript" src="Pieces/MountainsOfMadness.js"></script>-->
 </head>
