Added minification of various files into a single file and added synth and pattern printing

--- a/Lich.html
+++ b/Lich.html
@@ -47,51 +47,11 @@
 	<script type="text/javascript" src="third-party/glMatrix-0.9.5.min.js"></script>
 	<script type="text/javascript" src="third-party/webgl-utils.js"></script>
 	<script type="text/javascript" src="third-party/three.js/three.min.js"></script>
-	<!--<script type="text/javascript" src="third-party/codemirror.min.js"></script>-->
+	<script type="text/javascript" src="third-party/three.js/three.shaders.min.js"></script>
 	<script type="text/javascript" src="third-party/ace/ace.js"></script>
-	<script src="third-party/three.js/shaders/CopyShader.js"></script>
-	<script src="third-party/three.js/shaders/DotScreenShader.js"></script>
-	<script src="third-party/three.js/shaders/RGBShiftShader.js"></script>
-	<script src="third-party/three.js/postprocessing/EffectComposer.js"></script>
-	<script src="third-party/three.js/postprocessing/RenderPass.js"></script>
-	<script src="third-party/three.js/postprocessing/MaskPass.js"></script>
-	<script src="third-party/three.js/postprocessing/ShaderPass.js"></script>
 
-	<!-- Yes, there's a better way to load these... -->
-	<script src="third-party/three.js/shaders/BasicShader.js"></script>
-	<script src="third-party/three.js/shaders/BleachBypassShader.js"></script>
-	<script src="third-party/three.js/shaders/BlendShader.js"></script>
-	<script src="third-party/three.js/shaders/BokehShader.js"></script>
-	<script src="third-party/three.js/shaders/BrightnessContrastShader.js"></script>
-	<script src="third-party/three.js/shaders/ColorCorrectionShader.js"></script>
-	<script src="third-party/three.js/shaders/ColorifyShader.js"></script>
-	<script src="third-party/three.js/shaders/ConvolutionShader.js"></script>
-	<script src="third-party/three.js/shaders/CopyShader.js"></script>
-	<script src="third-party/three.js/shaders/DOFMipMapShader.js"></script>
-	<script src="third-party/three.js/shaders/DotScreenShader.js"></script>
-	<script src="third-party/three.js/shaders/EdgeShader.js"></script>
-	<script src="third-party/three.js/shaders/EdgeShader2.js"></script>
-	<script src="third-party/three.js/shaders/FilmShader.js"></script>
-	<script src="third-party/three.js/shaders/FocusShader.js"></script>
-	<script src="third-party/three.js/shaders/FresnelShader.js"></script>
-	<script src="third-party/three.js/shaders/FXAAShader.js"></script>
-	<script src="third-party/three.js/shaders/HorizontalBlurShader.js"></script>
-	<script src="third-party/three.js/shaders/HorizontalTiltShiftShader.js"></script>
-	<script src="third-party/three.js/shaders/HueSaturationShader.js"></script>
-	<script src="third-party/three.js/shaders/KaleidoShader.js"></script>
-	<script src="third-party/three.js/shaders/LuminosityShader.js"></script>
-	<script src="third-party/three.js/shaders/MirrorShader.js"></script>
-	<script src="third-party/three.js/shaders/NormalMapShader.js"></script>
-	<script src="third-party/three.js/shaders/RGBShiftShader.js"></script>
-	<script src="third-party/three.js/shaders/SepiaShader.js"></script>
-	<script src="third-party/three.js/shaders/SSAOShader.js"></script>
-	<script src="third-party/three.js/shaders/TriangleBlurShader.js"></script>
-	<script src="third-party/three.js/shaders/UnpackDepthRGBAShader.js"></script>
-	<script src="third-party/three.js/shaders/VerticalBlurShader.js"></script>
-	<script src="third-party/three.js/shaders/VerticalTiltShiftShader.js"></script>
-	<script src="third-party/three.js/shaders/VignetteShader.js"></script>
-
-	<script type="text/javascript" src="third-party/cycle.js"></script>
+	<!-- <script type="text/javascript" src="third-party/cycle.js"></script> -->
+	<!--
 	<script type="text/javascript" src="Compiler/Objects.js"></script>
 	<script type="text/javascript" src="Compiler/VM.js"></script>
 	<script type="text/javascript" src="Compiler/Compiler.js"></script>
@@ -112,7 +72,8 @@
 	<script type="text/javascript" src="Networking/LichClient.js"></script>
 	<script type="text/javascript" src="Networking/LichChat.js"></script>
 	<script type="text/javascript" src="Networking/LichTerminal.js"></script>
-	<script type="text/javascript" src="Pieces/MountainsOfMadnessPanel.js"></script>-
+	<script type="text/javascript" src="Pieces/MountainsOfMadnessPanel.js"></script>-->
+	<script type="text/javascript" src="lich.min.js"></script>
 	<script src="socket.io/socket.io.js"></script>
 	<!--<script type="text/javascript" src="Pieces/MountainsOfMadness.js"></script>-->
 </head>
