reconnection scheme in place, with notification

--- a/Lich.html
+++ b/Lich.html
@@ -86,12 +86,11 @@
 
     <div id="pageDiv">
     <textarea id="chatInput" rows="2" spellcheck="true" readonly="false">Chat...</textarea>
+	 <textarea id="connectionStatus" rows="1" spellcheck="false" readonly="true">Connected</textarea>
     <div id="textdiv">
     </div>
     <textarea id="post" rows="6" spellcheck="false" readonly="true">Lich.js&#10;</textarea>
     </div>
-
-
         
     <script LANGUAGE="JavaScript" type="text/javascript">
             compileLich();
