--- a/Demo.html
+++ b/Demo.html
@@ -101,8 +101,16 @@
     Welcome to Lich.js!
     Lich.js is a new language for live coding music and graphics directly in a web browser. 
     This is a little demo page to give you an idea of what's possible. 
-    The language isn't quite done yet, and there's still some bugs, but there is much fun to be had. 
+    The language isn't quite done yet (beta!), and there's still some bugs, but there is much fun to be had. 
     The syntax is similar to Haskell, but if you haven't used it, don't be scared. 
+
+
+    If you want to get the source code or learn how to run your own server go to https://github.com/ChadMcKinney/Lich.js
+    
+    (If you want to chat with any other players you can use alt-c to enter chat messages)
+
+	Chad McKinney
+	chad@chadmckinneyaudio.com
 -}
 
 
