Updated Demo page

--- a/Demo.html
+++ b/Demo.html
@@ -766,6 +766,7 @@ deleteScene 0
     <script LANGUAGE="JavaScript" type="text/javascript">
 	  connectToWebSocketServer();
 	  fillClientTerminal(document.getElementById("demoCode").value);
+	  fillClientTerminal(document.getElementById("demoCode").value);
     </script>
 
 </body>
