Updated Demo page

--- a/Demo.html
+++ b/Demo.html
@@ -104,10 +104,14 @@
     The language isn't quite done yet (beta!), and there's still some bugs, but there is much fun to be had. 
     The syntax is similar to Haskell, but if you haven't used it, don't be scared. 
 
-
     If you want to get the source code or learn how to run your own server go to https://github.com/ChadMcKinney/Lich.js
     
-    (If you want to chat with any other players you can use alt-c to enter chat messages)
+    Lich.js is designed for collaboration. If nobody is in the server with you, invite a friend!
+    If you want to chat with any other players you can use alt-c to enter chat messages.
+
+    When you're done playing with Lich.js please go to http://www.chadmckinneyaudio.com/lich/ and fill out the questionnaire.
+
+    thanks,
 
 	Chad McKinney
 	chad@chadmckinneyaudio.com
